--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
   <head>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" ></script>
     <script src="assets/js/leanback.js"></script>
+    <script src="assets/js/swfobject.js"></script>
     <link rel="stylesheet" type="text/css" href="assets/css/leanback.css">
   </head>
   <body>
-    <div id="results"></div>
+  <div id="ytapiplayer">
+      You need Flash player 8+ and JavaScript enabled to view this video.
+    </div>
   </body>
 </html>
