basic paginated tv

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <html>
   <head>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" ></script>
     <script src="assets/js/leanback.js"></script>
-    <script src="assets/js/swfobject.js"></script>
     <link rel="stylesheet" type="text/css" href="assets/css/leanback.css">
   </head>
   <body>
-  <div id="ytapiplayer">
-      You need Flash player 8+ and JavaScript enabled to view this video.
+    <div id="info-overlay">
+      <div id="video-title"></div>
+      <div id="video-text"></div>
     </div>
+    <div id="player"></div>
   </body>
 </html>
