--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" ></script>
+    <script type="text/javascript" src="assets/js/async.js"></script>
     <script src="assets/js/leanback.js"></script>
     <link rel="stylesheet" type="text/css" href="assets/css/leanback.css">
   </head>
