--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
   <head>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" ></script>
-    <script type="text/javascript" src="assets/js/async.js"></script>
     <script src="assets/js/leanback.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/leanback.css">
   </head>
   <body>
     <div id="info-overlay">
+      <div id="video-category"></div>
       <div id="video-title"></div>
       <div id="video-text"></div>
     </div>
